将BI中点击开关关掉

--- a/html/bi/lrbk.html
+++ b/html/bi/lrbk.html
@@ -124,6 +124,7 @@ a {
 					data : category,
 					x : 'left',
 					margin : 200,
+					selectedMode: false,
 					// 主题，主题
 					textStyle : {
 						fontSize : fontSize
