--- a/html/bi/srbk.html
+++ b/html/bi/srbk.html
@@ -123,6 +123,7 @@ a {
 					data : category,
 					x : 'left',
 					margin : 200,
+					selectedMode: false,
 					// 主题，主题
 					textStyle : {
 						fontSize : fontSize
@@ -146,7 +147,8 @@ a {
 					radius : '50%',
 					data : [ {
 						value : seriesdata[0],
-						name : category[0]
+						name : category[0],
+						clickable: false 
 					}, {
 						value : seriesdata[1],
 						name : category[1]
