打开每个BI时加上loading

--- a/html/bi/fxzk.html
+++ b/html/bi/fxzk.html
@@ -83,6 +83,7 @@ a {
 
 	//加载收入完成图表数据
 	function loadSrwcChart() {
+		$.hori.loading();
 		var url = $.hori.getconfig().appServerHost
 				+ "view/bi/loadJytsChart/accsyBiReport/services/reqBiReportData";
 		var temp = "$lt;?xml version='1.0' encoding='utf-8'?$gt;$lt;root$gt;$lt;reportdata$gt;$lt;reportid$gt;21$lt;/reportid$gt;$lt;/reportdata$gt;$lt;/root$gt;";
@@ -211,9 +212,12 @@ a {
 						document.getElementById("light_wall").innerHTML = imgString;
 						//显示顶部年份
 						changeTipYearPosition(year, monthdata);
+						
+						$.hori.loading("hide");
 					},
 					"error" : function(res) {
 						alert("error:" + res);
+						$.hori.loading("hide");
 						$.hori.hideLoading();
 					}
 				});
