--- a/html/bi/lrbk.html
+++ b/html/bi/lrbk.html
@@ -43,7 +43,8 @@ a {
 
 </head>
 <body>
-	<div id='month' style="float: right; display:none; margin-bottom: 15px;">
+	<div id='month'
+		style="float: right; display: none; margin-bottom: 15px;">
 		注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
 			data-bind="text: reportdata.month"></span>月。
 	</div>
@@ -52,6 +53,12 @@ a {
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$.hori.setHeaderTitle("利润板块");
+			var h = (document.documentElement.clientHeight);//可见区域高度
+			var w = document.documentElement.clientWidth;//可见区域高度
+			var sm = document.getElementById('main');
+			//h= parseInt(h)-5;
+			sm.style.height = h + "px";
+			sm.style.width = w + "px";
 			//加载利润板块图表数据
 			loadLrbkChart();
 		});
@@ -79,7 +86,7 @@ a {
 					var cWidth = window.screen.width;
 					var fontSize;
 					if (cWidth < 720) {
-						fontSize = 12;
+						fontSize = 15;
 					} else {
 						fontSize = 18;
 					}
@@ -126,7 +133,7 @@ a {
 					data : category,
 					x : 'left',
 					margin : 200,
-					selectedMode: false,
+					selectedMode : false,
 					// 主题，主题
 					textStyle : {
 						fontSize : fontSize
@@ -147,7 +154,7 @@ a {
 					},
 					name : title,
 					type : 'pie',
-					center : [ '50%', '70%' ],
+					center : [ '50%', '50%' ],
 					radius : '50%',
 					data : [ {
 						value : seriesdata[0],
