去掉些许“忘记密码”按钮的阴影

--- a/html/login.html
+++ b/html/login.html
@@ -394,7 +394,7 @@ function loginWithLoading(){
 
 						</div>
 						<div class="ui-block-b">
-							<a data-role="button" data-mini="true"
+							<a data-role="button" data-mini="true" style="border:none;"
 								onclick="forgetPwd()">忘记密码</a>
 						</div>
 					</div>
