--- a/html/xgbb.html
+++ b/html/xgbb.html
@@ -33,23 +33,54 @@ a {
 .divwh {height 5em;
 	
 }
+
+@media only screen and (min-width: 1070px) and (max-width: 1242px) {
+	.ic_launcher {
+		width: 130px;
+		height: 130px;
+	}
+	.qrcode {
+		width: 200px;
+		height: 200px;
+	}
+}
+
+@media screen and (min-width: 360px) and (max-width: 800px) {
+	.ic_launcher {
+		width: 110px;
+		height: 110px;
+	}
+	.qrcode {
+		width: 160px;
+		height: 160px;
+	}
+}
+
+@media screen and (min-width: 310px) and (max-width: 350px) {
+	.ic_launcher {
+		width: 90px;
+		height: 90px;
+	}
+	.qrcode {
+		width: 120px;
+		height: 120px;
+	}
+}
 </style>
 <body>
 	<div data-role="content" align="center" style="margin-top: 10px;">
 		<div class="divwh">
-			<img class="imgToDo" src="../assets/home/ic_launcher.png" style="width: 80px; height:80px;"/> <br>
+			<img class="ic_launcher" src="../assets/home/ic_launcher.png" /> <br>
 			<span>版本号 <font color="blue"><a href="#" id="banben"></a></font></span>
 			<p>
-				<img src="../assets/home/qrcode.png"
-					style="width: 180px; height: 180px;" /> <br>
+				<img class="qrcode" src="../assets/home/qrcode.png" /> <br>
 		</div>
-	<div class="ui-grid-a"
-		style="width: 85%; align: center; ">
-		<div class="ui-block-a" style="width: 100%">
-			<a href="javascript:void(0)" data-theme="b"
-				onclick="$.hori.backPage();$.hori.backPage();" data-role="button">&nbsp;退&nbsp;出&nbsp;</a>
+		<div class="ui-grid-a" style="width: 85%; align: center;">
+			<div class="ui-block-a" style="width: 100%">
+				<a href="javascript:void(0)" data-theme="b"
+					onclick="$.hori.backPage();$.hori.backPage();" data-role="button">&nbsp;退&nbsp;出&nbsp;</a>
+			</div>
 		</div>
-	</div>
 	</div>
 	<div style="position: relative;">
 		<div style="width: 100%; position: fixed; left: 20px; bottom: 5px;">
