--- a/html/xgbb.html
+++ b/html/xgbb.html
@@ -17,12 +17,19 @@
 		});
 
 	});
+	function doExit() {
+        if($.hori.getMobileType()=="android"){ //android设备
+        	$.hori.backPage();
+        	$.hori.backPage();
+        }else{ //ios设备
+        	var targetURL = $.hori.getconfig().serverBaseUrl + "viewhome/html/login.html";
+        	componentURL = $.hori.getconfig().serverBaseUrl + "viewhome/xml/Login.scene.xml";
+        	$.hori.loadPage(targetURL, componentURL);
+        }
+    }
 </script>
 <script>
-	function fun() {
-		$.hori.backPage();
-		$.hori.backPage();
-	}
+	
 </script>
 <style>
 a {
@@ -34,7 +41,7 @@ a {
 	
 }
 
-@media only screen and (min-width: 1070px) and (max-width: 1242px) {
+@media only screen and (min-width: 1070px) and (max-width: 1450px) {
 	.ic_launcher {
 		width: 130px;
 		height: 130px;
@@ -58,8 +65,8 @@ a {
 
 @media screen and (min-width: 310px) and (max-width: 350px) {
 	.ic_launcher {
-		width: 90px;
-		height: 90px;
+		width: 80px;
+		height: 80px;
 	}
 	.qrcode {
 		width: 120px;
@@ -75,17 +82,18 @@ a {
 			<p>
 				<img class="qrcode" src="../assets/home/qrcode.png" /> <br>
 		</div>
-		<div class="ui-grid-a" style="width: 85%; align: center;">
+		<div class="ui-grid-a" style="width: 100%; align: center;">
 			<div class="ui-block-a" style="width: 100%">
 				<a href="javascript:void(0)" data-theme="b"
-					onclick="$.hori.backPage();$.hori.backPage();" data-role="button">&nbsp;退&nbsp;出&nbsp;</a>
+					onclick="doExit();" data-role="button">&nbsp;退&nbsp;出&nbsp;</a>
 			</div>
 		</div>
 	</div>
 	<div style="position: relative;">
 		<div style="width: 100%; position: fixed; left: 20px; bottom: 5px;">
 			<p>
-				<span>版权所有：<br>&copy;中国通用技术(集团)控股有限责任公司
+				<span>版权所有：<br>&copy;中国通用技术(集团)控股有限责任公司<br>
+				联系电话：<a href="tel:63348866">63348866</a>&nbsp;<a href="tel:63448877">63448877</a>
 				</span>
 			</p>
 		</div>
