--- a/html/bi/srlr.html
+++ b/html/bi/srlr.html
@@ -57,7 +57,7 @@ a {
 	
 	<script type="text/javascript">
 		window.onload = function() {
-			var h = (document.documentElement.clientHeight) / 2;//可见区域高度
+			var h = (document.documentElement.clientHeight-20) / 2;//可见区域高度
 			var w = document.documentElement.clientWidth;//可见区域高度
 			var sm = document.getElementById('main');
 			sm.style.height = h + "px";
