* 修改退出为退出登录

--- a/html/xgbb.html
+++ b/html/xgbb.html
@@ -85,7 +85,7 @@ a {
 		<div class="ui-grid-a" style="width: 100%; align: center;">
 			<div class="ui-block-a" style="width: 100%">
 				<a href="javascript:void(0)" data-theme="b"
-					onclick="doExit();" data-role="button">&nbsp;退&nbsp;出&nbsp;</a>
+					onclick="doExit();" data-role="button">&nbsp;退出登录&nbsp;</a>
 			</div>
 		</div>
 	</div>
