--- a/html/task.html
+++ b/html/task.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 	<title>代办</title>
@@ -8,11 +7,14 @@
 	<script type="application/javascript" src="../assets/iscroll.js"></script>
 	<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.css" /> 
 	<link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
+	<link rel="stylesheet"
+		href="../lib/jquery-mobile/loading.jquery.mobile.min.css" /> 
 	<script src="../lib/jquery/jquery.min.js"></script>
 	<script src="../lib/encrypt/encrypt.js"></script>
 	<script src="../lib/json/json2.js"></script>
 	<script src="../lib/hori/hori.js?tag=21369"></script>
 	<script src="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.js"></script>
+	
 	<script src="../config/web/config.js"></script>
 	<script src="../lib/app/task/app.js"></script>
 	<style>
@@ -23,12 +25,13 @@
 			width: 90%;
 			overflow: scroll;
 		}
+		
 	</style>
 </head>
 <body>
 	<div id="list" data-role="page" class="type-home">
 		<div data-role="content" align="center">
-			<div  id="divDataLoading" style="width:90%;">
+			<div  id="divDataLoading" style="width:90%; display: none;">
 				<ul  data-role="listview" data-inset="true">
 					<li class="ui-li-static ui-body-inherit ui-first-child ui-last-child"><h3>数据加载中……</h3></li>
 				</ul>				
@@ -54,10 +57,6 @@
 		</div>
 		
 	</div>
-	
-	  
 	</body>
-	
-
 </html>
 
